XP-4482 Content Wizard toolbar - Fix menu overflow and alignment of the help-text icon
Updated the `.minimize-edit` button to use classes for show / hide.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
@@ -6,6 +6,12 @@
     .opacity(.8);
   }
 
+  &--live {
+    .split-panel .minimize-edit {
+      display: block;
+    }
+  }
+
   .toolbar {
     border-bottom: 1px solid @admin-medium-gray-border;
 
