--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
@@ -1,5 +1,5 @@
 .wizard-step-navigator {
-  width: calc(~'100% - 56px');
+  width: calc(~'100% - 70px');
   max-width: 635px;
   display: inline-block;
   background-color: @admin-bg-light-gray;
@@ -51,14 +51,6 @@
 
     &:last-of-type {
       margin-right: 10px;
-    }
-  }
-}
-
-.form-panel {
-  &._0-240, &._240-360, &._360-540 {
-    .wizard-step-navigator {
-      width: calc(~'100% - 45px');
     }
   }
 }
